flowc/tests/fixtures/resolve_unknown_tool.flow
type User = { id: string }

tool create_user(email: string) -> User
  effect deterministic

flow demo(User) -> User {
  x = nonexistent_thingamajig(it)
  x
}
